name:                conf-questions
version:             0.1.0.0
synopsis:            Web app for collecting, triaging, and answering questions from an audience.
-- description:
license:             AGPL-3
license-file:        LICENSE
author:              Greg Pfeil
maintainer:          greg@technomadic.org
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable conf-questions
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base, blaze-html, shakespeare, Spock, text
  hs-source-dirs:      src
  default-language:    Haskell2010